# vancat

./: example.env  generation_test.py  manage.py  nginx.conf  pyproject.toml  supervisor.conf  uwsgi.yml  web3patch.diff
app/: models.py  options.py  views.py
app/management/commands/: tokenomics_update.py  track_events.py
app/migrations/: 0001_initial_squashed_0009_artworkevent.py  0002_auto_20210923_1700.py  0003_artwork_created_at.py  0004_salelisting.py  0005_generationprocess.py  0006_auto_20211111_1531.py
app/schema/: __init__.py  mutations.py  query.py  types.py
contracts/: addresses.json  brownie-config.yml  build_interfaces.sh  flat.sol  package.json
contracts/contracts/: GenerateTokens.sol  Marketplace.sol  NFT.sol  OpenZeppelin  PaymentToken.sol
contracts/scripts/: deploy.py  generate_abis.py
frontend/: .parcelrc  index.html  package.json  tsconfig.json  types.d.ts
frontend/src/: App.tsx
frontend/src/components/: ArtworkCard.tsx  Button.tsx  Footer.tsx  Header.tsx  ImageUpload.tsx  Modal.tsx
frontend/src/contracts/: addresses.json  egg.abi.json  egg.ts  marketplace.abi.json  marketplace.ts  nft.abi.json  nft.ts  paymentToken.abi.json  paymentToken.ts  sperm.abi.json  sperm.ts
frontend/src/fonts/: demo.html  stylesheet.css
frontend/src/graphql/: .graphqlconfig  api.ts  fragments.graphql  mutations.graphql  queries.graphql  schema.graphql  sdk.ts
frontend/src/modals/: ConnectModal.tsx  EditProfileModal.tsx  SellModal.tsx  index.tsx
public/: .gitignore
vancat/: asgi.py  crypto.py  middlewares.py  settings.py  urls.py  utils.py  wsgi.py
(+52 files in other folders)
